🎨 Update btn color focus & hover
- Change color to white text

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -287,6 +287,8 @@ jhi-main {
 .btn {
   --bs-btn-color: #fff;
   --bs-btn-disabled-color: #fff;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-active-color: #fff;
 }
 
 .btn-outline-primary {
