--- a/src/main/webapp/app/gamer-squad/events/components/my-events/my-events.component.html
+++ b/src/main/webapp/app/gamer-squad/events/components/my-events/my-events.component.html
@@ -13,7 +13,7 @@
       <span class="nav-link" [class.active]="activeMenu === 'subscribed'" (click)="onMenu('subscribed')">Abonnés</span>
     </li>
     <li class="nav-item">
-      <span class="nav-link" [class.active]="activeMenu === 'pending'" (click)="onMenu('pending')">En attentes</span>
+      <span class="nav-link" [class.active]="activeMenu === 'pending'" (click)="onMenu('pending')">En attente</span>
     </li>
   </ul>
 
