🎨 Update user settings

--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -2,8 +2,7 @@
   <div class="d-flex justify-content-center">
     <div class="col-md-8" *ngIf="account$ | async as account">
       <h2 jhiTranslate="password.title" [translateValues]="{ username: account.login }">
-        Changer le mot de passe pour [<strong>{{ account.login }}</strong
-        >]
+        Changer le mot de passe pour <strong>{{ account.login }}</strong>
       </h2>
 
       <div class="alert alert-success" *ngIf="success" jhiTranslate="password.messages.success">
@@ -142,7 +141,7 @@
         <button
           type="submit"
           [disabled]="passwordForm.invalid"
-          class="btn btn-primary"
+          class="btn btn-primary d-block mx-auto"
           jhiTranslate="password.form.button"
           data-cy="submit"
         >
