--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -371,6 +371,14 @@ fa-icon:not(:last-child) {
   background-color: #e4e5e6;
 }
 
+.form-check {
+  margin-bottom: 0.75rem;
+}
+
+.form-check-input {
+  background-color: #e8f0fe;
+}
+
 /* ===========================
          Avatar image
 ============================== */
