--- a/src/test/resources/templates/mail/passwordResetEmail.html
+++ b/src/test/resources/templates/mail/passwordResetEmail.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:lang="${#locale.language}" lang="en">
   <head>
-    <title th:text="#{email.reset.title}">JHipster password reset</title>
+    <title th:text="#{email.reset.title}">GamerSquad password reset</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
-    <p th:text="#{email.reset.greeting(${user.login})}">Dear</p>
+    <p th:text="#{email.reset.greeting(${user.loginCapitalized})}">Dear</p>
     <p th:text="#{email.reset.text1}">
-      For your JHipster account a password reset was requested, please click on the URL below to reset it:
+      For your GamerSquad account a password reset was requested, please click on the URL below to reset it:
     </p>
     <p>
       <a th:with="url=(@{|${baseUrl}/account/reset/finish?key=${user.resetKey}|})" th:href="${url}" th:text="${url}">Login link</a>
@@ -15,7 +15,7 @@
     <p>
       <span th:text="#{email.reset.text2}">Regards, </span>
       <br />
-      <em th:text="#{email.signature}">JHipster.</em>
+      <em th:text="#{email.signature}">GamerSquad.</em>
     </p>
   </body>
 </html>
