--- a/src/main/webapp/app/account/activate/activate.component.html
+++ b/src/main/webapp/app/account/activate/activate.component.html
@@ -1,7 +1,8 @@
 <div>
   <div class="d-flex justify-content-center">
     <div class="col-md-8">
-      <h1 jhiTranslate="activate.title">Activation</h1>
+      <h1 class="text-center display-5" jhiTranslate="activate.title">Activation</h1>
+      <hr />
 
       <div class="alert alert-success" *ngIf="success">
         <span jhiTranslate="activate.messages.success"><strong>Votre compte utilisateur a été activé.</strong> Merci de vous </span>
