--- a/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
+++ b/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
@@ -1,7 +1,8 @@
 <div>
   <div class="d-flex justify-content-center">
     <div class="col-md-4">
-      <h1 jhiTranslate="reset.finish.title">Réinitialisation du mot de passe</h1>
+      <h1 class="text-center display-5" jhiTranslate="reset.finish.title">Réinitialisation du mot de passe</h1>
+      <hr />
 
       <div class="alert alert-danger" jhiTranslate="reset.finish.messages.keymissing" *ngIf="initialized && !key">
         La clef de réinitilisation est manquante
