--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
@@ -1,7 +1,8 @@
 <div>
   <div class="d-flex justify-content-center">
     <div class="col-md-8">
-      <h1 jhiTranslate="reset.request.title">Réinitialiser son mot de passe</h1>
+      <h1 class="text-center display-5" jhiTranslate="reset.request.title">Réinitialiser son mot de passe</h1>
+      <hr />
 
       <jhi-alert-error></jhi-alert-error>
 
