--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -1,9 +1,10 @@
 <div>
   <div class="d-flex justify-content-center">
     <div class="col-md-8" *ngIf="account$ | async as account">
-      <h2 jhiTranslate="password.title" [translateValues]="{ username: account.login }">
+      <h2 class="text-center display-5" jhiTranslate="password.title" [translateValues]="{ username: account.login }">
         Changer le mot de passe pour <strong>{{ account.login }}</strong>
       </h2>
+      <hr />
 
       <div class="alert alert-success" *ngIf="success" jhiTranslate="password.messages.success">
         <strong>Le mot de passe a été modifié !</strong>
