--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -1,7 +1,8 @@
 <div>
   <div class="d-flex justify-content-center">
     <div class="col-md-8">
-      <h1 jhiTranslate="register.title" data-cy="registerTitle">Création de compte utilisateur</h1>
+      <h1 class="text-center display-5" jhiTranslate="register.title" data-cy="registerTitle">Création de compte utilisateur</h1>
+      <hr />
 
       <div class="alert alert-success" *ngIf="success" jhiTranslate="register.messages.success">
         <strong>Compte enregistré !</strong> Merci de vérifier votre email de confirmation.
