--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -2,13 +2,15 @@
   <div class="d-flex justify-content-center">
     <div class="col-md-8">
       <h2
-        class="text-center"
+        class="text-center display-5"
         jhiTranslate="settings.title"
         [translateValues]="{ username: settingsForm.value.login | titlecase }"
         *ngIf="settingsForm.value.login"
       >
         Profil de l'utilisateur <strong>{{ settingsForm.value.login }}</strong>
       </h2>
+
+      <hr />
 
       <div class="alert alert-success" *ngIf="success" jhiTranslate="settings.messages.success">
         <strong>Votre profil a été sauvegardé !</strong>
