🎨 Update account settings
- Update img url label
- force identity to refresh on save settings

--- a/src/main/webapp/app/account/settings/settings.component.html
+++ b/src/main/webapp/app/account/settings/settings.component.html
@@ -151,7 +151,9 @@
         </div>
 
         <div class="mb-3">
-          <label class="form-label" for="imageUrl" jhiTranslate="settings.form.imageUrl">Image de profil</label>
+          <label class="form-label" for="imageUrl" jhiTranslate="settings.form.imageUrl"
+            >Image de profil <small>(max 512x512 pixels)</small></label
+          >
           <input
             type="url"
             class="form-control"
