🎨 Update friend chat height
- Fix the height changing with viewport width
- Add min-height

--- a/src/main/webapp/app/gamer-squad/friend-chats/components/friend-chats-list/friend-chats-list.component.scss
+++ b/src/main/webapp/app/gamer-squad/friend-chats/components/friend-chats-list/friend-chats-list.component.scss
@@ -13,7 +13,8 @@ h1 {
 }
 
 .messages-container {
-  height: calc(100vh - 28rem);
+  height: calc(100vh - 26.5rem);
+  min-height: 9rem;
   overflow: auto;
 }
 
@@ -38,6 +39,11 @@ h1 {
 
   .friend-chats-container {
     width: 80%;
+  }
+
+  .messages-container {
+    height: calc(100vh - 27rem);
+    overflow: auto;
   }
 }
 
