--- a/src/main/webapp/app/gamer-squad/friend-chats/components/friend-chats-list/friend-chats-list.component.html
+++ b/src/main/webapp/app/gamer-squad/friend-chats/components/friend-chats-list/friend-chats-list.component.html
@@ -3,65 +3,69 @@
 
   <jhi-alert></jhi-alert>
 
-  <h1 class="row align-items-center justify-content-center" *ngIf="playerFriend$ | async as playerFriend">
-    <div class="avatar-cropper col-auto">
-      <img *ngIf="!playerFriend.userImageUrl" src="/content/images/default/avatar.png" class="avatar-image" alt="Avatar" />
-      <img *ngIf="playerFriend.userImageUrl" [src]="playerFriend.userImageUrl" class="avatar-image" alt="Avatar" />
-    </div>
-    <div class="col-auto">
-      {{ playerFriend.userLogin | titlecase }}
-    </div>
-  </h1>
-
-  <hr />
-
-  <div #messageContainer class="messages-container" (scroll)="onScroll()">
-    <ng-container *ngIf="playerChats">
-      <ng-container *ngIf="playerChats.length !== 0; else noContent">
-        <ng-container *ngFor="let playerChat of playerChats">
-          <app-friend-chats-list-item [playerChat]="playerChat"> </app-friend-chats-list-item>
-        </ng-container>
-      </ng-container>
-    </ng-container>
-
-    <ng-template #noContent>
-      <div class="card text-center">
-        <div class="card-body">Aucun messages</div>
-      </div>
-    </ng-template>
-  </div>
-
-  <hr />
-
-  <div class="card card-form text-bg-light">
-    <form class="form" role="form" (ngSubmit)="OnNewMessage()" [formGroup]="friendMessageForm">
-      <div class="card-header">
-        <label for="message">Envoyer un message :</label>
-      </div>
-
-      <div class="card-body">
-        <textarea class="form-control" type="text" name="message" id="message" formControlName="message" placeholder="Votre message...">
-        </textarea>
-
-        <div
-          *ngIf="
-            friendMessageForm.get('message')!.invalid &&
-            (friendMessageForm.get('message')!.dirty || friendMessageForm.get('message')!.touched)
-          "
-        >
-          <small class="form-text text-danger" *ngIf="friendMessageForm.get('message')?.errors?.whitespace">
-            Votre message ne doit pas uniquement comporter des espaces.
-          </small>
-
-          <small class="form-text text-danger" *ngIf="friendMessageForm.get('message')?.errors?.maxlength">
-            Votre message ne doit pas comporter plus de 512 caractères.
-          </small>
+  <div class="card">
+    <div class="card-body">
+      <h1 class="row align-items-center justify-content-center" *ngIf="playerFriend$ | async as playerFriend">
+        <div class="avatar-cropper col-auto">
+          <img *ngIf="!playerFriend.userImageUrl" src="/content/images/default/avatar.png" class="avatar-image" alt="Avatar" />
+          <img *ngIf="playerFriend.userImageUrl" [src]="playerFriend.userImageUrl" class="avatar-image" alt="Avatar" />
         </div>
+        <div class="col-auto">
+          {{ playerFriend.userLogin | titlecase }}
+        </div>
+      </h1>
+
+      <hr />
+
+      <div #messageContainer class="messages-container" (scroll)="onScroll()">
+        <ng-container *ngIf="playerChats">
+          <ng-container *ngIf="playerChats.length !== 0; else noContent">
+            <ng-container *ngFor="let playerChat of playerChats">
+              <app-friend-chats-list-item [playerChat]="playerChat"></app-friend-chats-list-item>
+            </ng-container>
+          </ng-container>
+        </ng-container>
+
+        <ng-template #noContent>
+          <div class="card text-center">
+            <div class="card-body">Aucun messages</div>
+          </div>
+        </ng-template>
       </div>
 
-      <div class="card-footer text-center">
-        <button type="submit" [disabled]="friendMessageForm.invalid" class="btn btn-primary">Envoyer</button>
+      <hr />
+
+      <div class="card card-form text-bg-light">
+        <form class="form" role="form" (ngSubmit)="OnNewMessage()" [formGroup]="friendMessageForm">
+          <div class="card-header">
+            <label for="message">Envoyer un message :</label>
+          </div>
+
+          <div class="card-body">
+            <textarea class="form-control" type="text" name="message" id="message" formControlName="message" placeholder="Votre message...">
+            </textarea>
+
+            <div
+              *ngIf="
+                friendMessageForm.get('message')!.invalid &&
+                (friendMessageForm.get('message')!.dirty || friendMessageForm.get('message')!.touched)
+              "
+            >
+              <small class="form-text text-danger" *ngIf="friendMessageForm.get('message')?.errors?.whitespace">
+                Votre message ne doit pas uniquement comporter des espaces.
+              </small>
+
+              <small class="form-text text-danger" *ngIf="friendMessageForm.get('message')?.errors?.maxlength">
+                Votre message ne doit pas comporter plus de 512 caractères.
+              </small>
+            </div>
+          </div>
+
+          <div class="card-footer text-center">
+            <button type="submit" [disabled]="friendMessageForm.invalid" class="btn btn-primary">Envoyer</button>
+          </div>
+        </form>
       </div>
-    </form>
+    </div>
   </div>
 </div>
